<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_item_avatar"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/avatar"
            card_view:civ_border_width="1dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_username"
            style="@style/TextBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            card_view:layout_constraintBottom_toBottomOf="@+id/civ_item_avatar"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/civ_item_avatar"
            card_view:layout_constraintTop_toTopOf="@+id/civ_item_avatar"
            card_view:layout_constraintVertical_bias="0.25"
            tools:text="@string/users_username" />

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/TextNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_username"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_username"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_username"
            tools:text="@string/users_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>